--- a/FEM2d/FEM2d.vcxproj
+++ b/FEM2d/FEM2d.vcxproj
@@ -139,7 +139,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="FEM2d.cpp" />
+    <ClCompile Include="fem.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\titmouse2d\titmouse2d.vcxproj">
