--- a/FEM2d/FEM2d.vcxproj.filters
+++ b/FEM2d/FEM2d.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="FEM2d.cpp">
+    <ClCompile Include="fem.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
