--- a/FEM2d/FEM2d.vcxproj
+++ b/FEM2d/FEM2d.vcxproj
@@ -140,6 +140,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="fem.cpp" />
+    <ClCompile Include="fvm.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\titmouse2d\titmouse2d.vcxproj">
