--- a/titmouse2d/titmouse2d.vcxproj.filters
+++ b/titmouse2d/titmouse2d.vcxproj.filters
@@ -491,5 +491,8 @@
     <ClInclude Include="src\OtherMethod\FEM\FVMSolver2.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="src\Geometry\RecTangle.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
