--- a/OpenGL/OpenGL.vcxproj
+++ b/OpenGL/OpenGL.vcxproj
@@ -149,6 +149,7 @@
     <ClCompile Include="bubble.cpp" />
     <ClCompile Include="couplingTest.cpp" />
     <ClCompile Include="couplingTest2.cpp" />
+    <ClCompile Include="couplingTest3.cpp" />
     <ClCompile Include="FoamVortexSolver2.cpp" />
     <ClCompile Include="vp2005.h" />
     <ClCompile Include="vp2005.cpp" />
