--- a/titmouse2d/titmouse2d.vcxproj
+++ b/titmouse2d/titmouse2d.vcxproj
@@ -198,6 +198,7 @@
     <ClInclude Include="src\Eulerian\EulerianSmoke\EulerianSmokeSolver2.h" />
     <ClInclude Include="src\Eulerian\EulerianSmoke\EulerianSmokeGridData2.h" />
     <ClInclude Include="src\Geometry\Heart2.h" />
+    <ClInclude Include="src\Geometry\RecTangle.h" />
     <ClInclude Include="src\Geometry\RegularPolygon.h" />
     <ClInclude Include="src\helper\printer.h" />
     <ClInclude Include="src\helper_function.h" />
