--- a/FEM2d/FEM2d.vcxproj
+++ b/FEM2d/FEM2d.vcxproj
@@ -139,6 +139,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="2023.cpp" />
     <ClCompile Include="fem.cpp" />
     <ClCompile Include="fvm.cpp" />
   </ItemGroup>
