--- a/FEM2d/FEM2d.vcxproj.filters
+++ b/FEM2d/FEM2d.vcxproj.filters
@@ -21,5 +21,8 @@
     <ClCompile Include="fvm.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="2023.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
