--- a/Apic2d/Apic2d.vcxproj
+++ b/Apic2d/Apic2d.vcxproj
@@ -139,6 +139,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="2023.cpp" />
     <ClCompile Include="Apic2d.cpp" />
   </ItemGroup>
   <ItemGroup>
