--- a/treecode/treecode.vcxproj.filters
+++ b/treecode/treecode.vcxproj.filters
@@ -26,5 +26,11 @@
     <ClInclude Include="BarnesHut.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="GravitySolver2.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="GravityData2.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
