--- a/treecode/treecode.vcxproj
+++ b/treecode/treecode.vcxproj
@@ -149,6 +149,8 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="BarnesHut.h" />
+    <ClInclude Include="GravityData2.h" />
+    <ClInclude Include="GravitySolver2.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
