--- a/treecode/treecode.vcxproj.filters
+++ b/treecode/treecode.vcxproj.filters
@@ -21,12 +21,21 @@
     <ClCompile Include="BarnesHut.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="solver.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="solver1.cpp">
+      <Filter>头文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="BarnesHut.h">
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="GravitySolver2.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="solver.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
